# TasteStack-A-Recipe-Sharing-Platform

./: .gitignore  CHANGELOG.md  DATABASE_SWITCHING_README.md  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  Dockerfile  LICENSE  MOCK_API.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  Procfile  QUICK_START.md  README.md  REGISTRATION_TROUBLESHOOTING.md  build.sh  debug_steps.md  docker-compose.yml  docker-run.bat  nixpacks.toml  package-lock.json  package.json  railway.json  requirement.txt  setup-dependencies.ps1  start-servers.bat  test_api.ps1  test_frontend_registration.html  test_registration.py
backend/: .dockerignore  .env.example  .env.postgresql  DATABASE_CONFIGURATION.md  Dockerfile  README.md  db.sqlite3  docker-entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  switch-database.ps1  test_registration_django.py
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/management/commands/: checkdb.py
backend/accounts/migrations/: 0001_initial.py  0002_user_location_user_website_alter_user_first_name_and_more.py  0003_alter_user_username.py
backend/interactions/: models.py  serializers.py  urls.py  views.py
backend/interactions/migrations/: 0001_initial.py  0002_comment_hidden.py  0003_follow.py  0004_alter_comment_options_alter_comment_unique_together.py
backend/media/profile_pictures/: .gitkeep
backend/media/recipe_images/: .gitkeep
backend/recipes/: models.py  serializers.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_recipe_category.py  0003_alter_recipe_category.py  0004_alter_recipe_category.py
backend/recipes/views/: main.py  stats.py
backend/tastestack/: asgi.py  db_config.py  media_debug.py  settings.py  urls.py  wsgi.py
docker/: DOCKER_GUIDE.md  docker-compose.postgres.yml  docker-compose.sqlite.yml  run-postgres.bat  run-sqlite.bat  stop-postgres.bat  stop-sqlite.bat  test-docker.bat
docs/: COMPLETE_TUTORIAL.md  DJANGO_ORM_GUIDE.md  INSTALLATION_GUIDE.md  PROJECT_REPORT.md  REACT_GUIDE.md  README.md  SQLITE_GUIDE.md  TUTORIAL_INDEX.md  USER_MANUAL.md
frontend/: .dockerignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  active.txt  index.css
frontend/src/components/: CommentDebugger.js  CommentManagement.js  Footer.js  Navbar.css  Navbar.js  ProtectedRoute.js  ScrollToTop.js  UserProfileCard.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/pages/: AboutPage.js  CreateRecipePage.js  DashboardPage.js  EditProfileDetails.js  EditProfilePage.js  EditRecipePage.js  ForgotPasswordPage.js  HomePage.js  LoginPage.js  ProfilePage.js  ProfilePage_backup.js  PublicProfilePage.js  RecipeDetailPage.js  RecipeListPage.js  RecipeSearchPage.js  RegisterPage.js  ResetPasswordPage.js  contactPage.js
frontend/src/services/: api.js  authService.js  dashboardService.js  mockApi.js  recipeService.js  statisticsService.js
frontend/src/utils/: i18n.js  searchHelpers.js  validation.js
scripts/: setup.bat  start-dev.bat
src/: App.js
src/pages/: CreateRecipePage.js  HomePage.js  RecipeDetailPage.js
src/services/: mockApi.js  recipeService.js
